# Python-Pscine

./: README.md
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py  loading.py  testing.py
ex09/: README.md  pyproject.toml
ex09/ft_package/: count_in_list.py
list0/ex00/: Hello.py
list0/ex01/: format_ft_time.py
list0/ex03/: NULL_not_found.py
list0/ex05/: building.py
list0/ex06/: filterstring.py
list0/ex09/ft_package.egg-info/: PKG-INFO
list1/ex00/: give_bmi.py
list1/ex01/: array2D.py
list1/ex02/: load_image.py
list1/ex03/: load_image.py  zoom.py
list1/ex04/: rotate.py
list1/ex05/: load_image.py  pimp_image.py
